# ChangeLog for net-p2p/dchub
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/dchub/ChangeLog,v 1.12 2004/06/25 00:29:54 agriffis Exp $

  12 May 2004; Jon Hood <squinky86@gentoo.org> -dchub-0.2.5.ebuild,
  dchub-0.4.5.ebuild:
  stable on x86, cleaning old versions

  20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> dchub-0.2.5.ebuild,
  dchub-0.4.2.ebuild, dchub-0.4.5.ebuild:
  Added IUSE.

*dchub-0.4.5 (23 Jul 2003)

  23 Jul 2003; Arcady Genkin <agenkin@gentoo.org> :
  Version bump.

*dchub-0.4.2 (24 Apr 2003)

  24 Apr 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump + init.d update.

*dchub-0.4.0 (11 Mar 2003)

  11 Mar 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump.

*dchub-0.2.5 (26 Jan 2003)

  26 Jan 2003; Mike Frysinger <vapier@gentoo.org> :
  Version bump #14577 + added some init scripts i made a while back.

*dchub-0.2.2 (05 Nov 2002)

  05 Nov 2002; Daniel Ahlberg <aliz@gentoo.org> :
  Version bump.

*dchub-0.1.1 (19 Jul 2002)

  26 Aug 2002; Ryan Phillips <rphillips@gentoo.org> :

  fixes to documentation installation.  Fixes #6997. 
  Submitted by vapier at netzero.com

  24 Jul 2002; Mark Guertin <gerk@gentoo.org> :
  Added ppc to keywords

  19 Jul 2002; Maik Schreiber <blizzy@gentoo.org> :

  Initial import, closes bug #5221.