@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dchub/dchub-0.4.2.ebuild,v 1.4 2004/06/25 00:29:54 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dchub/dchub-0.4.2.ebuild,v 1.5 2004/07/01 09:13:42 squinky86 Exp $
 
 IUSE=""
 
@@ -12,7 +12,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="x86 ppc"
 
-RDEPEND="virtual/glibc
+RDEPEND="virtual/libc
 	=dev-libs/glib-1*
 	dev-lang/perl
 	dev-db/edb"
