@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_recovermet/ed2k_recovermet-0.2_alpha1.ebuild,v 1.4 2004/06/25 00:30:47 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_recovermet/ed2k_recovermet-0.2_alpha1.ebuild,v 1.5 2004/07/01 09:17:08 squinky86 Exp $
 
 DESCRIPTION="Tool for recovering eDonkey2000 .part.met files"
 HOMEPAGE="http://gentoo.mirror.at.stealer.net/files/"
@@ -11,7 +11,7 @@ SLOT="0"
 KEYWORDS="x86"
 IUSE=""
 
-DEPEND="virtual/glibc"
+DEPEND="virtual/libc"
 
 S=${WORKDIR}
 
