@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-fasttrack/gift-fasttrack-0.8.7.ebuild,v 1.4 2004/06/25 00:31:51 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/gift-fasttrack/gift-fasttrack-0.8.7.ebuild,v 1.5 2004/07/01 09:19:56 squinky86 Exp $
 
 IUSE=""
 
@@ -13,7 +13,7 @@ SLOT="0"
 LICENSE="GPL-2"
 KEYWORDS="x86 sparc ~ppc amd64"
 
-DEPEND="virtual/glibc
+DEPEND="virtual/libc
 	>=net-p2p/gift-0.11.1
 	>=sys-apps/sed-4
 	>=sys-libs/zlib-1.1.4"
