@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/ed2k_recovermet
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_recovermet/ChangeLog,v 1.4 2004/06/25 00:30:47 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_recovermet/ChangeLog,v 1.5 2004/07/01 09:17:08 squinky86 Exp $
+
+  01 Jul 2004; Jon Hood <squinky86@gentoo.org>
+  ed2k_recovermet-0.2_alpha1.ebuild:
+  virtual/glibc needs changed to virtual/libc
 
   02 Jun 2004; Jon Hood <squinky86@gentoo.org>
   ed2k_recovermet-0.2_alpha1.ebuild:
