@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/dchub
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/dchub/ChangeLog,v 1.12 2004/06/25 00:29:54 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/dchub/ChangeLog,v 1.13 2004/07/01 09:13:42 squinky86 Exp $
+
+  01 Jul 2004; Jon Hood <squinky86@gentoo.org> dchub-0.4.2.ebuild,
+  dchub-0.4.5.ebuild:
+  virtual/glibc needs changed to virtual/libc
 
   12 May 2004; Jon Hood <squinky86@gentoo.org> -dchub-0.2.5.ebuild,
   dchub-0.4.5.ebuild:
